// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change the value by click checkbox 1`] = `
<div>
  test component
  
  <span>
    changedValue:
    undefined
  </span>
   
  <div
    id="value"
  >
    false
  </div>
   
  <label
    class="seu-radio"
    role="radio"
    tabindex="0"
  >
    <input
      aria-hidden="true"
      class="seu-radio__original"
      tabindex="-1"
      type="radio"
      value="1"
    />
     
    <span
      class="seu-radio__input"
    >
      <span
        class="seu-radio__inner"
      />
    </span>
     
    <span
      class="seu-radio__label"
    >
      label4
    </span>
  </label>
</div>
`;

exports[`change the value by click checkbox 2`] = `
<div>
  test component
  
  <span>
    changedValue:
    label:1, value:1
  </span>
   
  <div
    id="value"
  >
    1
  </div>
   
  <label
    aria-checked="true"
    class="seu-radio is-checked"
    role="radio"
    tabindex="0"
  >
    <input
      aria-hidden="true"
      class="seu-radio__original"
      tabindex="-1"
      type="radio"
      value="1"
    />
     
    <span
      class="seu-radio__input is-checked"
    >
      <span
        class="seu-radio__inner"
      />
    </span>
     
    <span
      class="seu-radio__label"
    >
      label4
    </span>
  </label>
</div>
`;
